ui lang, virtual fluid, missing textures

--- a/src/main/resources/assets/create_mechanical_spawner/lang/default/ui.json
+++ b/src/main/resources/assets/create_mechanical_spawner/lang/default/ui.json
@@ -8,5 +8,6 @@
   "create_mechanical_spawner.spawner.tooltip.progress": "Progress: %d%%",
   "create_mechanical_spawner.spawner.scrollValue.label": "Spawn at height (in blocks)",
 
-  "item.create_mechanical_spawner.mechanical_spawner.summary": "Spawns Mob with spawn liquid."
+  "block.create_mechanical_spawner.mechanical_spawner.tooltip": "MECHANICAL SPAWNER",
+  "block.create_mechanical_spawner.mechanical_spawner.tooltip.summary": "Spawns _Mobs_ with spawn liquid."
 }
