--- a/changes/1.20.1-0.1.0.h-48.md
+++ b/changes/1.20.1-0.1.0.h-48.md
@@ -3,3 +3,5 @@
 - Added config: allow customLootPerSpawnRecipeEnabled
 - Custom loot per spawmn fluid.
   - Works only with loot collectors or Item vault/Container if configured.
+- KubeJS filter
+- Internal rework
