--- a/changes/1.20.1-0.1.0.h-48.md
+++ b/changes/1.20.1-0.1.0.h-48.md
@@ -5,3 +5,6 @@
   - Works only with loot collectors or Item vault/Container if configured.
 - KubeJS mob filter
 - Internals rework
+- Unrestrict stress config. Thnx to @lonevox
+- Added ru_ru translation by @ProTerUga
+- Added fr_fr translation by @LolaALittlePopoto
